<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/retnLogo"
        android:layout_width="0dp"
        android:layout_height="216dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:src="@drawable/retn_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/otp"
        android:layout_width="295dp"
        android:layout_height="52dp"
        android:layout_marginTop="25dp"
        android:hint="@string/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp_heading" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="271dp"
        android:layout_height="66dp"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:text="@string/verify"
            android:textSize="20sp"
            android:visibility="visible" />
    </GridLayout>

    <TextView
        android:id="@+id/otp_heading"
        android:layout_width="406dp"
        android:layout_height="76dp"
        android:layout_marginTop="72dp"
        android:gravity="center|fill"
        android:paddingLeft="15sp"
        android:text="@string/otp_message"
        android:textColor="#070707"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/retnLogo"
        tools:text="@string/otp_message" />


</androidx.constraintlayout.widget.ConstraintLayout>
